Pass state to listener explicitly
This allows the state sync between interface state and stored state
to be something other than a file on disk and makes the whole thing
easier to test.

Also: some experimentation with codecov.io. More to come.

--- a/.drone.yml
+++ b/.drone.yml
@@ -56,6 +56,20 @@ steps:
           event:
               - push
 
+    - name: coverage
+      image: golang:1.12.5-stretch
+      pull: always
+      commands:
+          - bash test_coverage.sh
+          - bash <(curl -s https://codecov.io/bash)
+      when:
+          branch:
+              - master
+              - develop
+              - feature/*
+          event:
+              - push
+
     - name: vet
       image: golang:1.12.5-stretch
       pull: always
